# gfcc

./: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md
cmake/: check_user_env.cmake
contrib/CMakeBuild/: CMakeLists.txt  README.md
contrib/CMakeBuild/cmake/: CMakeBuildConfig.cmake.in  NWChemExTargetConfig.cmake.in
contrib/CMakeBuild/cmake/build_external/: BuildAntlrCppRuntime.cmake  BuildBLAS.cmake  BuildBLIS.cmake  BuildCBLAS.cmake  BuildCMakeBuild.cmake  BuildCXXBLACS.cmake  BuildEigen3.cmake  BuildGTest.cmake  BuildGlobalArrays.cmake  BuildHPTT.cmake  BuildLAPACK.cmake  BuildLAPACKE.cmake  BuildLibChemist.cmake  BuildLibInt2.cmake  BuildMSGSL.cmake  BuildNWX_Catch.cmake  BuildScaLAPACK.cmake  BuildTALSH.cmake  Buildbphash.cmake  Buildcereal.cmake  Buildpybind11.cmake
contrib/CMakeBuild/cmake/find_external/: FindAntlrCppRuntime.cmake  FindBLAS.cmake  FindBLIS.cmake  FindCBLAS.cmake  (+6 more)
contrib/TAMM/: CMakeLists.txt
contrib/basis/: 6-31++g*.g94
docs/: FAQ.md  install.md
driver/: CMakeLists.txt  GF_CCSD.cpp  GF_CCSD_CS.cpp
src/gfcc/: CMakeLists.txt  cd_svd_ga.hpp  diis.hpp  gf_ccsd.cpp  gf_ccsd.hpp  gf_ccsd_cs.hpp  gf_diis.hpp  gf_diis_cs.hpp  gf_guess.hpp  gfccsd_ip.hpp  hartree_fock_tamm.hpp
src/gfcc/contrib/: ccsd_util.hpp  cd_ccsd_common.hpp  cd_svd_ga.hpp  hartree_fock_tamm.hpp  hf_common.hpp  hf_tamm_common.hpp  input_parser.hpp  linalg.hpp  scf_guess.hpp
tests/: c60.nwx  co.nwx  cytosine.nwx  guanine.nwx  guanine_cytosine_2bp.nwx  guanine_cytosine_3bp.nwx  guanine_cytosine_bp.nwx  h2o.nwx
tests/sample_outputs/: co.out  h2o.out
(+19 files in other folders)
